typos en acentos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
         <h1>Especialistas en esterilización hospitalaria y desinfección de espacios</h1>
-        <a href="nosotros.html" class="btnclaro">Mas Información</a>
+        <a href="nosotros.html" class="btnclaro">Más Información</a>
       </div>
     </div>
 <!--    Foto 02  -->
@@ -75,7 +75,7 @@
       <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
         <h1>Líderes en bio-desinfección de superficies para cualquier sector o espacio.</h1>
-        <a href="biodesinfeccion.html" class="btnclaro">Mas Información</a>
+        <a href="biodesinfeccion.html" class="btnclaro">Más Información</a>
       </div>
     </div>
 <!--  Foto 04  -->
@@ -93,7 +93,7 @@
       <iframe src="https://player.vimeo.com/video/465178039?autoplay=1&loop=1&autopause=0&muted=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="vimeo-wrapper d-sm-block"></iframe>
       <div class="carousel-caption d-md-block">
         <h1>La primera central independiente de reprocesamiento de instrumental médico de ciclo completo de México</h1>
-        <a href="biodesinfeccion.html" class="btnclaro">Mas Información</a>
+        <a href="biodesinfeccion.html" class="btnclaro">Más Información</a>
       </div>
     </div>
   </div>
@@ -127,7 +127,7 @@
    
     <h3 class="titulo" data-aos="fade-down" data-aos-offset="100" data-aos-duration="800" data-aos-delay="50">Esterilización externa</h3>
     <p class="texto" data-aos="fade-right" data-aos-offset="150" data-aos-duration="800">Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.</p>
-    <a href="esterilizacion.html" class="btnclaro boton" data-aos="fade-right" data-aos-offset="200" data-aos-duration="800">Mas Información</a>
+    <a href="esterilizacion.html" class="btnclaro boton" data-aos="fade-right" data-aos-offset="200" data-aos-duration="800">Más Información</a>
     <figure class="foto" data-aos="fade-left" data-aos-offset="250" data-aos-duration="800">
         <div id="carouselQS" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -165,7 +165,7 @@
    
     <h3 class="titulo" data-aos="fade-left" data-aos-offset="100" data-aos-duration="800">Bio-desinfección</h3>
     <p class="texto" data-aos="fade-left" data-aos-offset="150" data-aos-duration="800">Es un servicio automatizado para desinfectar y descontaminar cualquier espacio, mediante el uso de vapor de peróxido de hidrógeno. Este proceso de desinfección ha demostrado la inactivación de patógenos altamente resistentes, como COVID-19. Ha sido ampliamente utilizado en el sector salud, alimenticio, corporativo y doméstico.</p>
-    <a href="biodesinfeccion.html" class="btnclaro boton" data-aos="fade-left" data-aos-offset="200" data-aos-duration="800">Mas Información</a>
+    <a href="biodesinfeccion.html" class="btnclaro boton" data-aos="fade-left" data-aos-offset="200" data-aos-duration="800">Más Información</a>
     <figure class="foto" data-aos="fade-right" data-aos-offset="250" data-aos-duration="1000">
         <div id="carouselBD" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -437,25 +437,25 @@
         </div>
 <!--        <img src="img/logo02.png" class="imgfooter">-->
     </aside>
-    <form  data-aos="slide-right" data-aos-duration="800">
+    <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST"  data-aos="slide-right" data-aos-duration="800">
      <div class="form-group">
     <label for="formGroupExampleInput">Nombre</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre">
   </div>
   <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <label for="exampleInputEmail1">Correo electrónico</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo electrónico">
   </div>
  
   <div class="form-group">
-    <label for="formGroupExampleInput">Organizacion</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Organizacion">
+    <label for="formGroupExampleInput">Organización</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Organización">
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Mensaje</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary enviar">Submit</button>
+  <button type="submit" class="btn btn-primary enviar">Enviar</button>
 </form>
   
    </footer>
