--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 </nav>
     <!--Carusel fotos home-->
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="false">
+<div id="carouselExampleCaptions" class="carousel slide bgcarouselintro" data-ride="carousel" data-interval="false">
     <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" ></li>
@@ -393,7 +393,8 @@
                 Álvaro Obregón 213, Col. Roma Norte, C.P. 06700, <br>Alcaldía Cuauhtémoc, CDMX, México.
             </p>
             <a href="tel:+525561008640" class="linkfoot">+52 55 6100 8640</a>
-            <a href="mailto:info@healthic.com.mx" class="linkfoot">info@healthic.com.mx</a>    
+            <a href="mailto:info@healthic.com.mx" class="linkfoot">info@healthic.com.mx</a>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30103.08205642336!2d-99.17696279110288!3d19.417363061139767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff3affffffff%3A0x7268cf0d46dcb60d!2sHealthic!5e0!3m2!1sen!2smx!4v1602781166560!5m2!1sen!2smx" width="90%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>   
         </address>
         <div class="socialicons">
             <a href="#" data-aos="slide-up" data-aos-duration="800">
@@ -408,7 +409,7 @@
 <path class="feibuk" d="M170.381,4132.042a16.026,16.026,0,0,1-2.849.785.273.273,0,0,0-.028-.079,4.736,4.736,0,0,0,2.223-2.726,8.827,8.827,0,0,1-3.219,1.2,4.907,4.907,0,0,0-8.448,3.4,4.515,4.515,0,0,0,.115,1.044h-.183a12.566,12.566,0,0,1-10.125-5.078s-2.4,3.455,1.42,6.654a6.59,6.59,0,0,1-2.178-.6,5.108,5.108,0,0,0,3.877,4.86,4.432,4.432,0,0,1-2.115.18,5.05,5.05,0,0,0,4.564,3.374,7.69,7.69,0,0,1-3.1,1.7,8.673,8.673,0,0,1-4.155.3,13.939,13.939,0,0,0,21.661-11.448c0-.116,0-.235,0-.352.017-.2.04-.408.04-.618a32.59,32.59,0,0,0,2.5-2.587"/>
 </g>
 </svg></a>
-           <a href="#" data-aos="slide-up" data-aos-duration="800" data-aos-delay="100">
+           <a href="https://www.youtube.com/channel/UCFpOMphRmT6ROhHLii-78tQ" data-aos="slide-up" data-aos-duration="800" data-aos-delay="100">
             <svg viewBox="0 0 24.176 23.643" xmlns="http://www.w3.org/2000/svg">
 <g transform="translate(-181.26 -4127.7)">
 <path class="a" d="M201.024,4138.982H185.68a4.422,4.422,0,0,0-4.418,4.421v3.548a4.417,4.417,0,0,0,4.418,4.416h15.344a4.416,4.416,0,0,0,4.414-4.416V4143.4A4.421,4.421,0,0,0,201.024,4138.982Zm-12.117,2.763h-1.431v7.091H186.1v-7.091h-1.424v-1.2h4.23Zm4.028,7.091H191.71v-.671a2.672,2.672,0,0,1-.7.565,1.474,1.474,0,0,1-.715.191.745.745,0,0,1-.636-.272,1.308,1.308,0,0,1-.217-.82v-5.113h1.226v4.693a.547.547,0,0,0,.074.315.282.282,0,0,0,.248.095.74.74,0,0,0,.346-.128,1.656,1.656,0,0,0,.374-.327v-4.648h1.225Zm4.438-1.265a1.515,1.515,0,0,1-.291,1,1,1,0,0,1-.825.35,1.535,1.535,0,0,1-.64-.139,1.614,1.614,0,0,1-.528-.418v.474h-1.234v-8.292h1.234v2.67a1.693,1.693,0,0,1,.528-.423,1.143,1.143,0,0,1,.565-.149,1.06,1.06,0,0,1,.881.388,1.823,1.823,0,0,1,.31,1.145Zm4.236-1.647h-2.342v1.152a1.244,1.244,0,0,0,.13.671.449.449,0,0,0,.408.184.5.5,0,0,0,.426-.161,1.316,1.316,0,0,0,.125-.694v-.28h1.253v.312a1.989,1.989,0,0,1-.458,1.424,1.839,1.839,0,0,1-1.374.469,1.674,1.674,0,0,1-1.294-.506,1.941,1.941,0,0,1-.47-1.387v-2.744a1.73,1.73,0,0,1,.522-1.3,1.828,1.828,0,0,1,1.333-.5,1.718,1.718,0,0,1,1.3.463,1.83,1.83,0,0,1,.445,1.334Z"/>
@@ -455,7 +456,7 @@
     <label for="exampleFormControlTextarea1">Mensaje</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary enviar">Enviar</button>
+  <button type="submit" class="btnobscuro enviar">Enviar</button>
 </form>
   
    </footer>
