--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="carousel-inner">
 <!--   Foto 01 -->
     <div class="carousel-item">
-      <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
+      <img src="img/Home-01.jpg" class="d-block w-100 obscuro" alt="...">
       <div class="carousel-caption d-md-block">
         <h1>Especialistas en esterilización hospitalaria y desinfección de espacios</h1>
         <a href="nosotros.html" class="btnclaro">Más Información</a>
@@ -72,7 +72,7 @@
 -->
 <!--  Foto 03  -->
     <div class="carousel-item">
-      <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
+      <img src="img/Home-02.jpg" class="d-block w-100 obscuro" alt="...">
       <div class="carousel-caption  d-md-block">
         <h1>Líderes en bio-desinfección de superficies para cualquier sector o espacio.</h1>
         <a href="biodesinfeccion.html" class="btnclaro">Más Información</a>
@@ -91,6 +91,7 @@
     <!--  Foto 05 VIDEO  -->
     <div class="carousel-item active">
       <iframe src="https://player.vimeo.com/video/465178039?background=1&autoplay=1&loop=1&autopause=0&muted=1" frameborder="0" allow="autoplay; fullscreen" class="vimeo-wrapper d-sm-block"></iframe>
+      <div class="obscuro"></div>
       <div class="carousel-caption d-md-block">
         <h1>La primera central independiente de reprocesamiento de instrumental médico de ciclo completo de México</h1>
         <a href="biodesinfeccion.html" class="btnclaro">Más Información</a>
@@ -500,6 +501,7 @@
       </div>
 -->
       <div class="links ultimis">
+         <img src="img/cert_pendiente.jpeg">
           <p>Healthic ® 2020</p>
       </div>
   </div>
