cert pendiente faltantes

--- a/esterilizacion.html
+++ b/esterilizacion.html
@@ -236,6 +236,7 @@
       </div>
 -->
       <div class="links ultimis">
+         <img src="img/cert_pendiente.jpeg">
           <p>Healthic ® 2020</p>
       </div>
   </div>
