--- a/nosotros.html
+++ b/nosotros.html
@@ -548,6 +548,7 @@ Fue en diciembre de 2017 cuando Healthic se puso en marcha en la mente de su fun
       </div>
 -->
       <div class="links ultimis">
+         <img src="img/cert_pendiente.jpeg">
           <p>Healthic ® 2020</p>
       </div>
   </div>
