--- a/biodesinfeccion.html
+++ b/biodesinfeccion.html
@@ -274,6 +274,7 @@
       </div>
 -->
       <div class="links ultimis">
+         <img src="img/cert_pendiente.jpeg">
           <p>Healthic ® 2020</p>
       </div>
   </div>
